Proyecto 18: Movie App
Se añadió código al archivo script.js

--- a/day18-MovieApp/css/styles.css
+++ b/day18-MovieApp/css/styles.css
@@ -28,6 +28,7 @@ body {
       -ms-flex-pack: end;
           justify-content: flex-end;
   padding: 1rem;
+  margin-right: 1rem;
 }
 
 .header .search--container {
@@ -61,12 +62,12 @@ body {
 }
 
 .header .search--container .search {
-  width: 0;
+  width: 18.5rem;
   max-height: 100%;
   background: #ecf0f1;
   border-radius: .2rem 0 0 .2rem;
   padding: 0;
-  padding-left: 0;
+  padding-left: 1rem;
   font-size: 1.12rem;
   -webkit-transition: width .2s ease;
   transition: width .2s ease;
