--- a/day34-AnimatedCountdown/css/styles.scss
+++ b/day34-AnimatedCountdown/css/styles.scss
@@ -27,6 +27,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: $font-stack-1;
+    overflow: hidden;
 }
 
 .container {
@@ -40,6 +41,7 @@ body {
         font-size: 3.125rem;
         margin: 1rem;
         text-transform: uppercase;
+        color: $color-dark;
     }
 
     .counter,
@@ -128,9 +130,11 @@ body {
     }
 
     .final {
+        transform: scale(0);
+
         .replay {
             position: relative;
-            top: 5rem;
+            top: 2rem;
             padding: 1rem 1.5rem;
             background: $color-dark;
             color: $color-light;
