--- a/day35-ImageCarousel/css/styles.css
+++ b/day35-ImageCarousel/css/styles.css
@@ -23,7 +23,12 @@ body {
 }
 
 .container {
-  height: 80vh;
+  width: 40rem;
+  height: 50rem;
+  max-width: 100%;
+  overflow: hidden;
+  -webkit-box-shadow: 0.3rem 0.2rem 0.3rem 0.1rem rgba(44, 62, 80, 0.5);
+          box-shadow: 0.3rem 0.2rem 0.3rem 0.1rem rgba(44, 62, 80, 0.5);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -34,35 +39,42 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .container .gallery--container {
-  width: 40rem;
-  height: 50rem;
-  max-width: 100%;
-  -webkit-box-shadow: 0.3rem 0.2rem 0.3rem 0.1rem rgba(44, 62, 80, 0.5);
-          box-shadow: 0.3rem 0.2rem 0.3rem 0.1rem rgba(44, 62, 80, 0.5);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   position: relative;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+  -webkit-transition: -webkit-transform .5s ease-in-out;
+  transition: -webkit-transform .5s ease-in-out;
+  transition: transform .5s ease-in-out;
+  transition: transform .5s ease-in-out, -webkit-transform .5s ease-in-out;
 }
 
 .container .gallery--container img {
-  width: 100%;
+  width: 40rem;
   height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
+  min-width: auto;
+  max-height: 50rem;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
-.container .buttons--container {
+.buttons--container {
   width: 100%;
   height: 3rem;
-  margin-top: .5rem;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
-.container .buttons--container button {
+.buttons--container button {
   width: 20rem;
   height: 100%;
   border: 0;
@@ -75,16 +87,16 @@ body {
   cursor: pointer;
 }
 
-.container .buttons--container button:active {
+.buttons--container button:active {
   -webkit-transform: scale(0.97);
           transform: scale(0.97);
 }
 
-.container .buttons--container button:focus {
+.buttons--container button:focus {
   outline: 0;
 }
 
-.container .buttons--container button.prev:hover .left {
+.buttons--container button.prev:hover .left {
   -webkit-transform: translateX(-2rem);
           transform: translateX(-2rem);
   -webkit-transition: -webkit-transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -93,7 +105,7 @@ body {
   transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1), -webkit-transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-.container .buttons--container button.next:hover .right {
+.buttons--container button.next:hover .right {
   -webkit-transform: translateX(2rem);
           transform: translateX(2rem);
   -webkit-transition: -webkit-transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -102,7 +114,7 @@ body {
   transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1), -webkit-transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-.container .buttons--container button::before, .container .buttons--container button::after {
+.buttons--container button::before, .buttons--container button::after {
   position: absolute;
   text-transform: capitalize;
   -webkit-transition: all 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -112,11 +124,11 @@ body {
   display: inline-flex;
 }
 
-.container .buttons--container button.prev:hover::before {
+.buttons--container button.prev:hover::before {
   content: attr(data-prev);
 }
 
-.container .buttons--container button.next:hover::before {
+.buttons--container button.next:hover::before {
   content: attr(data-next);
   -webkit-transform: translateX(-2.5rem);
           transform: translateX(-2.5rem);
